Fixing the images overflowing the layout

--- a/scss/blocks/markdown.scss
+++ b/scss/blocks/markdown.scss
@@ -29,5 +29,9 @@
 
   table {
     width: -webkit-fill-available;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
